src/test/deca/context/invalid/improvided/initialisation_float_boolean.deca
{
   // Description:
   //  Test avec initialization d'un float avec un boolean.
   //
   // Resultats:
   // Ligne 8: The given types are incompatible.
   float z = true;
}
